=== master

* Support a :skip_invalid option in auto_validations plugin for not adding errors to a column that already has an error (jeremyevans)

* Support a :skip_invalid option in validation_helpers for not adding an error to a column that already has an error (jeremyevans)

* Support :adder, :remover, and :clearer association options that use keyword arguments in Ruby 2.7+ (jeremyevans)

* Make pg_interval use the same number of seconds per year and per month as ActiveSupport::Duration when using ActiveSupport 5.1+ (jeremyevans)

=== 5.40.0 (2021-01-01)

* Support UPDATE FROM syntax in SQLite 3.33.0+ (jeremyevans)

* Have pg_interval extension work with ActiveSupport 6.1 (jeremyevans)

* Have date_arithmetic extension work with ActiveSupport 6.1 (jeremyevans)

* Avoid method redefinition warnings in verbose warning mode (jeremyevans)

=== 5.39.0 (2020-12-01)

* Support :clustered option for primary key and unique constraints on Microsoft SQL Server (jeremyevans)

* Do not modify the size of binary columns when using set_column_allow_null on Microsoft SQL Server (jeremyevans) (#1736)

* Add a fork safety guide with more detail on how to use Sequel with libraries that fork (janko) (#1733)

* Make the roots_dataset method in the tree plugin work with queries using joins (jeremyevans) (#1731)

* Make Database#tables return partitioned tables on PostgreSQL 10+ (epoberezhny) (#1729, #1730)

=== 5.38.0 (2020-11-01)

* Do not add new Database instances to Sequel::DATABASES if the test connection fails (jeremyevans) (#1727)

* Support the newer com.mysql.cj.jdbc.Driver in the jdbc/mysql adapter (jeremyevans)

* Do not swallow disconnect errors in Database#create_or_replace_view or Database#create_table* on Oracle (jeremyevans)

* Only rescue non-disconnect Sequel::DatabaseErrors in Postgres::Database#server_version (jeremyevans) (#1724)

* Make the single_table_inheritance and prepared_statements plugins work if loaded into the same class (jeremyevans) (#1721)
